2013-05-27  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: (SFtpListInfo::Do) fixed return value (prevents an endless loop).

2013-05-21  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: set size=NO_SIZE when the size could not be found.
	* FileSet.cc: allow info merging for files with the same basename.
	* Fish.cc: fixed file correption and garbage logging by requiring
	  the file to have a size; improve error handling.

2013-05-20  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: disconnect in more cases on Close.

2013-05-13  Alexander V. Lukyanov <lav@yars.free.net>

	* TorrentTracker.cc, TorrentTracker.h: use xstring for InfoHash and
	  PeerId.

2013-05-07  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: fixed NULL dereference when use-dht is off.

2013-04-18  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Http.h: improve DirFile; add slash for directories in ARRAY_INFO.
	* FileAccess.cc, FileAccess.h, FileCopy.cc, FileCopy.h, FileSet.cc,
	  FileSet.h, Fish.cc, GetFileInfo.cc, GetFileInfo.h, Http.cc,
	  LocalAccess.cc, NetAccess.cc, NetAccess.h, SFtp.cc, SFtp.h,
	  ftpclass.cc: use FileSet for ARRAY_INFO; add READLINK support in sftp.

2013-04-12  Alexander V. Lukyanov <lav@yars.free.net>

	* DHT.cc, DHT.h, Torrent.cc, Torrent.h: (DenounceDHT) new method; use it.
	* complete.cc, FileGlob.cc, SFtp.cc: show .. and . in glob results.
	* FileSetOutput.cc: add -a option for completion results display to show
	  dot files.

2013-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: change reget to "resume transfer".

2013-03-11  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: list all jobs from the top.
	* Job.cc: don't add empty line for no-session jobs.
	* IdNameCache.cc: fixed lookup by name.

2013-02-27  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc, resource.cc: add SNI support.
	* commands.cc, NetAccess.cc: add cls -a option; don't filter out
	  . and .. by default.